fix: scrollbar appearing in history

--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,7 @@ textarea, input{
     color: white;
     background: none;
 }
+
+::-webkit-scrollbar {
+    width: 2rem;
+}
